RESOLVED FIXED309937
SVG image element not repainted when href attribute is removed
https://bugs.webkit.org/show_bug.cgi?id=309937
Summary SVG image element not repainted when href attribute is removed
Ahmad Saleem
Reported 2026-03-13 20:11:41 PDT
ssia - we somehow don't show two WPT tests as failure in our infrastructure but they show as failure on dashboard and this fixes it.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-13 20:11:48 PDT
Ahmad Saleem
Comment 2 2026-03-13 20:14:19 PDT
EWS
Comment 3 2026-03-17 04:20:58 PDT
Committed 309397@main (4046b9aec3fd): <https://commits.webkit.org/309397@main> Reviewed commits have been landed. Closing PR #60612 and removing active labels.
EWS
Comment 4 2026-03-18 21:02:59 PDT
Committed 305413.518@safari-7624-branch (7f60036c0f3f): <https://commits.webkit.org/305413.518@safari-7624-branch> Reviewed commits have been landed. Closing PR #4762 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.